--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -28,6 +28,7 @@
     <div id="root"></div>
     <div id="router-container"></div>
     <div id="list-container"></div>
+    <div id="img-container"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
