--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -26,6 +26,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <div id="app"></div>
     <div id="router-container"></div>
     <div id="list-container"></div>
     <div id="img-container"></div>
